fix: color of album title is not transperent on mobile

--- a/src/app/components/shop/shop.component.scss
+++ b/src/app/components/shop/shop.component.scss
@@ -293,7 +293,11 @@
 
     &__album-title-container::after {
       display: none;
-    }
+		}
+		
+		&__album-title {
+			background-color: transparent;
+		}
 
     &__button {
       &_cart {
